Begin working register user
